--- a/app/assets/templates/mobile/questionnaire.jst.ejs.erb
+++ b/app/assets/templates/mobile/questionnaire.jst.ejs.erb
@@ -207,8 +207,8 @@
       </div>
     </div>
     <!-- Modal window rtl -->
-    <div class="modal-backdrop mobile" ng-show="showModal"></div>
-    <div class="modal" ng-show="showModal">
+    <div class="modal-backdrop mobile" ng-click="checkIfAutoCompleteListIsOpenAndCloseIt($event)" ng-show="showModal"></div>
+    <div class="modal" ng-click="checkIfAutoCompleteListIsOpenAndCloseIt($event)" ng-show="showModal">
       <div class="rtl modal-content" >
 <!--        <span class="close-button" ng-click="closeModalFunc()">×</span>-->
 
