--- a/app/assets/templates/mobile/questionnaire.jst.ejs.erb
+++ b/app/assets/templates/mobile/questionnaire.jst.ejs.erb
@@ -220,7 +220,7 @@
             <input type="text" id="firstname" ng-click="showAutoCompleteList('firstname')" ng-change="searchAutocompleteFunc('firstname')" ng-model="search_input.firstname" class="modal-input" name="firstname" placeholder="{{mobile_app_service.t('enter_first_name')}}" required>
           </div>
           <!-- AutoComplete Snowball by Firstname and LastName -->
-          <div class= 'search-result snowball-firstname' ng-if = "showFirstNameList">
+          <div class= 'search-result snowball-firstname' ng-if = "showFirstNameList && ((autocomplete.firstnames && autocomplete.firstnames.length != 0 ) && search_input.firstname.length > 0)">
             <div class="search-item"
                  ng-click ="chooseAndHide(search_node,'firstname')"
                  ng-class ="{'ltr': !mobile_app_service.isLangRtl()}"
@@ -229,16 +229,13 @@
                 <div class="emp-name">{{search_node}}</div>
               </div>
             </div>
-            <div class= "search-item no-results" ng-if="autocomplete.firstnames.length === 0">
-              {{mobile_app_service.t('no_results')}}
-            </div>
           </div>
           <!-- AutoComplete Snowball  -->
           <div class="form-group mobile">
             <input type="text" class="modal-input" id="lastname" name="lastname" ng-click="showAutoCompleteList('lastname')" ng-change="searchAutocompleteFunc('lastname')" ng-model="search_input.lastname" placeholder="{{mobile_app_service.t('enter_last_name')}}" required>
           </div>
           <!-- AutoComplete Snowball by Firstname and LastName -->
-          <div class= 'search-result snowball-lastname' ng-if = "showLastNameList">
+          <div class= 'search-result snowball-lastname' ng-if = "showLastNameList && ((autocomplete.lastnames && autocomplete.lastnames.length != 0 ) && search_input.lastname.length > 0)">
             <div class="search-item"
                  ng-click ="chooseAndHide(search_node,'lastname')"
                  ng-class ="{'ltr': !mobile_app_service.isLangRtl()}"
@@ -246,9 +243,6 @@
               <div class="search-emp-name">
                 <div class="emp-name">{{search_node}}</div>
               </div>
-            </div>
-            <div class= "search-item no-results" ng-if="autocomplete.lastnames.length === 0">
-              {{mobile_app_service.t('no_results')}}
             </div>
           </div>
           <!-- AutoComplete Snowball  -->
@@ -298,7 +292,7 @@
             <input type="text" id="firstname" ng-click="showAutoCompleteList('firstname')" ng-change="searchAutocompleteFunc('firstname')" ng-model="search_input.firstname" class="modal-input" name="firstname" placeholder="{{mobile_app_service.t('enter_first_name')}}" required>
           </div>
           <!-- AutoComplete Snowball by Firstname and LastName -->
-          <div class= 'search-result snowball-firstname' ng-if = "showFirstNameList">
+          <div class= 'search-result snowball-firstname' ng-if = "showFirstNameList && ((autocomplete.firstnames && autocomplete.firstnames.length != 0 ) && search_input.firstname.length > 0)">
             <div class="search-item"
                  ng-click ="chooseAndHide(search_node,'firstname')"
                  ng-class ="{'ltr': !mobile_app_service.isLangRtl()}"
@@ -307,16 +301,13 @@
                 <div class="emp-name">{{search_node}}</div>
               </div>
             </div>
-            <div class= "search-item no-results" ng-if="autocomplete.firstnames.length === 0">
-              {{mobile_app_service.t('no_results')}}
-            </div>
           </div>
           <!-- AutoComplete Snowball  -->
           <div class="form-group mobile">
             <input type="text" id="lastname" ng-click="showAutoCompleteList('lastname')" ng-change="searchAutocompleteFunc('lastname')" ng-model="search_input.lastname" class="modal-input" name="lastname" placeholder="{{mobile_app_service.t('enter_last_name')}}" required>
           </div>
           <!-- AutoComplete Snowball by Firstname and LastName -->
-          <div class= 'search-result snowball-lastname' ng-if = "showLastNameList">
+          <div class= 'search-result snowball-lastname' ng-if = "showLastNameList && ((autocomplete.lastnames && autocomplete.lastnames.length != 0 ) && search_input.lastname.length > 0)">
             <div class="search-item"
                  ng-click ="chooseAndHide(search_node,'lastname')"
                  ng-class ="{'ltr': !mobile_app_service.isLangRtl()}"
@@ -324,9 +315,6 @@
               <div class="search-emp-name">
                 <div class="emp-name">{{search_node}}</div>
               </div>
-            </div>
-            <div class= "search-item no-results" ng-if="autocomplete.lastnames.length === 0">
-              {{mobile_app_service.t('no_results')}}
             </div>
           </div>
           <!-- AutoComplete Snowball  -->
