--- a/app/assets/stylesheets/mobile/search_common.scss
+++ b/app/assets/stylesheets/mobile/search_common.scss
@@ -677,3 +677,41 @@
       margin-top: 1.4rem !important;
     }
   }
+
+  // question instruction top
+
+  .mobile-wrapper .mobile-container .mobile-content .question-instruction-tooltip .question-container {
+    position: absolute;
+    background-color: #fff;
+    font-size: 48px;
+    padding: 4rem;
+    z-index: 11;
+    top: -250px;
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: 0 0 30px 30px;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    transition: 0.5s;
+  }
+
+
+  .mobile-wrapper .mobile-container .mobile-content .question-instruction-tooltip .question-container-display {
+    top: 14rem;
+    box-sizing: border-box;
+  }
+
+  .mobile-wrapper .mobile-container .mobile-content .question-instruction-tooltip .question-container .v-idle-container {
+    background-image: url('/assets/v_idle.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: 90px;
+    width: 90px;
+  }
+  .mobile-wrapper .mobile-container .mobile-content .question-instruction-tooltip .question-container .v-idle-btn {
+    position: relative;
+    text-align: center;
+    left: 47%;
+    margin: 0;
+    bottom: -100px;
+  }
