Updated styles, added checker that change top value for question box based on height of that element

--- a/app/assets/templates/mobile/questionnaire.jst.ejs.erb
+++ b/app/assets/templates/mobile/questionnaire.jst.ejs.erb
@@ -23,14 +23,14 @@
   </div>
   
   <div class='mobile-content' id="main_container" ng-class="{'finish-question': isFinished() && isLoaded()}">
-    <div class='question-instruction-tooltip' ng-click="hidePopup($event)">
+    <div class='question-instruction-tooltip'>
       <div class='full-question-blocker-show' ng-class="{'full-question-blocker-hide': (!show_full_question && !show_popup)}"></div>
       <div class='question-container' ng-class="{'question-container-display': show_full_question}">
         <div ng-if="mobile_app_service.isLangRtl()" class='question' dir='rtl'><bdi ng-bind-html='r.question' dir="rtl"></bdi></div>
         <div ng-if="!mobile_app_service.isLangRtl()" class='question'><bdi ng-bind-html='r.question'></bdi></div>
-        <div ng-if="show_full_question" class='close-btn close-q-container'>
+        <div ng-if="show_full_question" ng-click="hidePopup($event)" class='close-btn close-q-container'>
           <!-- {{mobile_app_service.t('close_button')}}<%#= I18n.t('questionnaire.close_button') %>--></div>
-        <div ng-if="!show_full_question" class='v-idle-btn v-idle-container'>
+        <div ng-if="!show_full_question" ng-click="showPopup()" class='v-idle-btn v-idle-container'>
           <!-- {{mobile_app_service.t('close_button')}}<%#= I18n.t('questionnaire.close_button') %>--></div>
         <div class="genericPopUp confirm-box" ng-class="{'genericPopUp-display': isChoseBySearch(),'genericPopUp-rtl': mobile_app_service.isLangRtl()}">
           <div class="subject">
@@ -338,4 +338,5 @@
 
 
 
+</div>
 </div>
