--- a/app/assets/stylesheets/mobile/search_common.scss
+++ b/app/assets/stylesheets/mobile/search_common.scss
@@ -686,7 +686,7 @@
     font-size: 48px;
     padding: 4rem;
     z-index: 11;
-    top: -250px;
+    top: -800px;
     width: 100%;
     box-sizing: border-box;
     border-radius: 0 0 30px 30px;
@@ -702,7 +702,7 @@
   }
 
   .mobile-wrapper .mobile-container .mobile-content .question-instruction-tooltip .question-container .v-idle-container {
-    background-image: url('/assets/v_idle.png');
+    background-image: image-url('/assets/workships_v_idle.png');
     background-repeat: no-repeat;
     background-size: 100%;
     height: 90px;
